fips verb to build the webpage

--- a/web/index.html
+++ b/web/index.html
@@ -7,26 +7,25 @@
 <link rel="icon" type="image/png" href="favicon.png"/>
 </head>
 <body>
-  <div class="top-padding"></div>
-  <div class="title-border"></div>
-  <div class="title">KLEINCOMPUTER KC85</div>
-  <div class="title-border"></div>
+    <div class="top-padding"></div>
+    <div class="title-border"></div>
+    <div class="title">KLEINCOMPUTER KC85</div>
+    <div class="title-border"></div>
 
-  <div class="nav-bar" style="width:450px">
+    <div class="nav-bar" style="width:450px">
     <ul class="nav-list">
-        <li class="nav-item"><a class="nav-link" style="width:150px" href="about.html">about</a></li>
+        <li class="nav-item"><a class="nav-link" style="width:150px" href="about.html" target="_blank">about</a></li>
         <li class="nav-item"><a class="nav-link" style="width:150px" href="http://github.com/floooh/yakc" target="_blank">github</a></li>
         <li class="nav-item"><a class="nav-link" style="width:150px" onclick="Module.requestFullScreen(false, true)" href="javascript:void(0);">fullscreen</a></li>
         <div class="break"></div>
     </ul>
-  </div>
+    </div>
 
-  <div class="game-border">
+    <div class="game-border">
     <canvas class="game" id="canvas" hidden oncontextmenu="event.preventDefault()" width="640" height="512"></canvas>
-  </div>
-  <div class="bottom"></div>
+    </div>
 
-  <script type="text/javascript" src="emsc.js"></script>
-  <script async type="text/javascript" src="yakc_app.js"></script>
+    <script type="text/javascript" src="emsc.js"></script>
+    <script async type="text/javascript" src="yakc_app.js"></script>
 </body>
 </html>
