--- a/web/index.html
+++ b/web/index.html
@@ -1,31 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<head>
-<meta charset="UTF-8"/>
-<title>Virtual KC85</title>
-<link rel="stylesheet" type="text/css" href="style.css"/>
-<link rel="icon" type="image/png" href="favicon.png"/>
-</head>
-<body>
-    <div class="top-padding"></div>
-    <div class="title-border"></div>
-    <div class="title">KLEINCOMPUTER KC85</div>
-    <div class="title-border"></div>
-
-    <div class="nav-bar" style="width:450px">
-    <ul class="nav-list">
-        <li class="nav-item"><a class="nav-link" style="width:150px" href="about.html" target="_blank">about</a></li>
-        <li class="nav-item"><a class="nav-link" style="width:150px" href="http://github.com/floooh/yakc" target="_blank">github</a></li>
-        <li class="nav-item"><a class="nav-link" style="width:150px" onclick="Module.requestFullScreen(false, true)" href="javascript:void(0);">fullscreen</a></li>
-        <div class="break"></div>
-    </ul>
-    </div>
-
-    <div class="game-border">
-    <canvas class="game" id="canvas" hidden oncontextmenu="event.preventDefault()" width="640" height="512"></canvas>
-    </div>
-
-    <script type="text/javascript" src="emsc.js"></script>
-    <script async type="text/javascript" src="yakc_app.js"></script>
-</body>
-</html>
+---
+layout: mainpage
+---
